# yam

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/YetAnotherMlp/: Activation.hpp  Algorit.hpp  ArrayOfArrays.hpp  Dataset.hpp  MLPStructure.hpp  MLPTrainer.hpp  MLPerceptron.hpp  Mathematics.hpp  Mnist.hpp  Random.hpp  Utils.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  TestMLPStructure.cpp  TestMLPerceptron.cpp  TestMLTrainer.cpp  TestUtils.cpp
